S13P11D204-100 feat : GroupServiceImpl log 추가